# llaminar

./: .dockerignore  .env.template  .gitignore  .gitmodules  CMakeLists.txt  CONTRACT_VALIDATION_GUIDE.md  DEV_CONTAINER_README.md  Dockerfile  GQA_EXPANSION_FIX_SUMMARY.md  K_GATHERING_ROPE_GQA_TEST_RESULTS.md  PARITY_FRAMEWORK_SUMMARY.md  Q_PROJECTION_ERROR_DISTRIBUTION_ANALYSIS.md  README.md  ROPE_APPLICATION_DEBUG_INVESTIGATION_SUMMARY.md  ROPE_LAYOUT_ANALYSIS_FINDINGS.md  ROPE_TENSOR_DISCREPANCY_ANALYSIS.md  analyze_qproj_error_distribution.py  auto_run_pipeline.sh  bench_rope.cpp  bench_tp_output_projection.cpp  benchmark_config.sh  benchmark_config_validation.sh  benchmark_tile_sweep.sh  benchmark_tile_sweep_bf16.sh  benchmark_tile_sweep_combined.sh  benchmark_tile_sweep_quick.sh  binding_sweep.sh  build_e2e_release.sh  check_validation_status.sh  cuda_heuristic_nn.onnx  quick_sweep.sh  release-please-config.json  requirements.txt  run_batch_performance.sh  run_llaminar.sh  run_llaminar_debug.sh  run_performance_bench.sh  run_pytorch_parity_test.sh  test_validation_quick.sh  training_metrics.json  (+3 more)
src/v2/: CMakeLists.txt  Main.cpp  README.md
src/v2/app/: AppContext.h  AppLifecycle.cpp  ICommand.h  InferenceRunnerAdapter.cpp  InferenceRunnerAdapter.h  MPIBootstrapPhase.cpp  MPIShutdown.cpp  MPIShutdown.h  RuntimeInitPhase.cpp  Splash.cpp  Splash.h  StartupBanner.cpp  StartupBanner.h  SubcommandRouter.cpp  SubcommandRouter.h
src/v2/backends/: .gitkeep  BackendManager.cpp  BackendManager.h  CPUBackend.cpp  CPUBackend.h  CPUSocketInfo.h  CUDAEnumeration.cu  ComputeBackend.cpp  ComputeBackend.h  DeviceAddressAdapter.cpp  DeviceAddressAdapter.h  DeviceId.h  DeviceRegistry.cpp  DeviceRegistry.h  DeviceType.h  GPUDeviceContextPool.cpp  GPUDeviceContextPool.h  GPUEnumeration.h  GlobalDeviceAddress.cpp  GlobalDeviceAddress.h  HardwareInventory.cpp  HardwareInventory.h  IBackend.h  IDeviceRegistry.h  IWorkerGPUContext.h  InventoryPrinter.cpp  InventoryPrinter.h  PCIeEnumeration.cpp  ROCmEnumeration.cpp
src/v2/cmake/: AutoSetCapabilities.cmake
src/v2/collective/: BackendRouter.cpp  BackendRouter.h  DeviceGroup.cpp  DeviceGroup.h  GlobalTPContext.cpp  GlobalTPContext.h  IBufferRegistration.h  ICollectiveBackend.h  IGlobalTPContext.h  ILocalTPContext.h  ITPContext.h  LocalPPContext.cpp  LocalTPContext.cpp  LocalTPContext.h  TPContextFactory.cpp  TPContextFactory.h
src/v2/config/: CliSpec.h  CollectiveBackendType.cpp  CollectiveBackendType.h  ConfigValidator.cpp  ExecutionDomainDefinition.cpp  ExecutionDomainDefinition.h  IOrchestrationConfigParser.h  OrchestrationConfig.cpp  OrchestrationConfig.h  OrchestrationConfigParser.cpp  OrchestrationConfigParser.h  PPDeviceAssignment.h  PPStageConfig.h  ParallelismTreeParser.cpp  ParallelismTreeParser.h  PipelineConfig.h  TPPPValidator.h  TensorParallelConfig.cpp  TensorParallelConfig.h
src/v2/execution/: BufferRole.h  CollectiveContext.cpp  CollectiveContext.h  ComputeStage.cpp  ComputeStage.h  DeviceContext.cpp  DeviceContext.h  DeviceGraphOrchestrator.cpp  DeviceGraphOrchestrator.h  DeviceInventory.h  DeviceWorkspaceManager.cpp  ExecutionPlanBuilder.cpp  ExecutionPlanBuilder.h  ExecutionPolicy.h  GraphBufferManager.cpp  GraphBufferManager.h  GraphBuildUtils.h  GraphExecutor.cpp  GraphExecutor.h  GraphOrchestrator.cpp  GraphOrchestrator.h  GraphResolver.cpp  GraphResolver.h  GraphSchema.h  HeterogeneousLayerExecutor.cpp  IExecutionPlanBuilder.h  IGraphBuilder.h  IGraphExecutor.h  IInferenceRunner.h  ILayerExecutor.h  IModelExecutor.h  IPipelineParallelGraphBuilder.h  InferenceMode.h  InferenceRunnerFactory.cpp  InferenceRunnerFactory.h  LayerDevicePlacement.cpp  LayerDevicePlacement.h  LayerExecutor.cpp  LayerExecutor.h  ModelExecutor.cpp  (+14 more)
src/v2/inference/: IInferenceRunner.h  InferenceRunner.cpp  InferenceRunner.h
src/v2/interfaces/: ICollectiveContext.h  IGraphBufferManager.h  IMPIContext.cpp  IMPIContext.h  IMPITopology.h  IModelContext.h  IModelLoader.h  IMultiDeviceOrchestrator.h  IRankOrchestrator.h  IWeightManager.h  IWeightPlacementMap.h  IWorkDistributor.h  IWorkspaceConsumer.h
src/v2/kernels/: .gitkeep  DeviceKernelCache.cpp  HybridKVCacheConfig.h  IHybridKVCache.h  IKVCache.h  IMoEKernel.cpp  IMoEKernel.h  IPackedWeights.h  KernelFactory.cpp  KernelFactory.h  KernelRegistry.h  PackedWeightsSerialization.h
src/v2/loaders/: DeviceOrchestrator.cpp  DeviceOrchestrator.h  ExpertGemmRegistry.cpp  ExpertGemmRegistry.h  ExpertSlabTypes.h  GGUFLoader.cpp  GGUFLoader.h  GPUVramPreflight.h  ILocalTPWeightSharder.h  IModelLoader.h  IPartialWeightLoader.h  IProgressPublisher.h  IWeightManager.h  IWeightSlicer.h  IWeightStreamer.h  LayerWeightStreamer.cpp  LayerWeightStreamer.h  LocalTPWeightSharder.cpp  MmapRegion.h  ModelContext.cpp  ModelContext.h  ModelContextConfig.h  ModelLoader.cpp  ModelLoader.h  NullWeightStreamer.h  PartialWeightLoader.cpp  PreparedWeightStore.cpp  PreparedWeightStore.h  StreamingConfigFromEnv.h  WeightIdentity.cpp  WeightIdentity.h  WeightLifecycleTrace.cpp  WeightLifecycleTrace.h  WeightLoadProgress.h  WeightLoadProgressAggregator.cpp  WeightLoadProgressAggregator.h  WeightManager.cpp  WeightManager.h  WeightManagerConfig.h  WeightMetadataRegistry.cpp  (+12 more)
src/v2/memory/: BufferArena.cpp  BufferArena.h  BufferId.h  CoherenceTracker.cpp  NUMAAllocator.cpp  NUMAAllocator.h
src/v2/models/: GraphTypes.h  IGraphConfigBuilder.h  ModelRegistrations.cpp  ModelRegistrations.h  README.new-models.md
src/v2/orchestration/: IOrchestrationRunner.h  IOrchestrationRunnerFactory.h  OrchestrationRunner.cpp  OrchestrationRunner.h  OrchestrationRunnerFactory.cpp
src/v2/pipelines/: .gitkeep  (+10 more)
tests/v2/: .gitkeep  CMakeLists.txt  README.md  Test__ArgParser.cpp  Test__CPUKernels.cpp  Test__DeviceAwareExecution.cpp  Test__DeviceOrchestrator.cpp  Test__DeviceOrchestrator_Phase2.cpp  Test__DeviceTransfer.cpp  Test__FullINT8Pipeline.cpp  Test__MPITensorParallel.cpp  Test__MPITensorParallelCorrectness.cpp  Test__MPIVectorizedAttention.cpp  Test__TensorDimensions.cpp  Test__VectorizedPrimitives.cpp  Test__WeightPlacementMap.cpp
(+3612 files in other folders)
